k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medal-bot
  labels:
    app: medal-bot
spec:
  replicas: 1 # El overlay puede ajustar el número de réplicas
  selector:
    matchLabels:
      app: medal-bot
  template:
    metadata:
      labels:
        app: medal-bot
    spec:
      containers:
        - name: medal-bot
          image: ghcr.io/ikurotime/medal-bot:${IMAGE_TAG} # La imagen puede ser modificada en el overlay
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr-secret
