k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medal-bot-service
spec:
  selector:
    app: medal-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
