k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medal-bot-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web # Personaliza según tus necesidades
spec:
  rules:
    - host: example.com # Cambiado en el overlay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medal-bot-service
                port:
                  number: 80
